--- a/aboutme.html
+++ b/aboutme.html
@@ -124,7 +124,7 @@
                   <div class ="about-paragraph">
                     I'm currently a UX designer in training and working on
                     projects in product design and web development. Aside from
-                    design, you can find me hiking, running, practicing photography, editing videos, or streaming songs on Spotify.
+                    design, you can find me running, exploring nature, practicing photography, editing videos, or streaming on Spotify.
                   </div>
                   <div class ="about-paragraph">
                     I'm always excited to collaborate and build new experiences. Feel free to reach me at: <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
