--- a/aboutme.html
+++ b/aboutme.html
@@ -218,7 +218,7 @@
                 <!-- ========== Added Spotify ========== -->
                 <div class="instagram-container">
                   <div class="instagram-title-box">
-                    <a class="instagram-title" href="https://open.spotify.com/user/lueirene" style="margin-top:0px" target="_blank" title="Spotify"> WHAT I ENJOY LISTENING TO: </a>
+                    <a class="instagram-title" href="https://open.spotify.com/user/lueirene" style="margin-top:0px" target="_blank" title="Spotify"> WHAT I'VE BEEN LISTENING TO: </a>
                   </div>
                   <div class="spotify-container">
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0riyEjwFO7vIR8hhvyk700?utm_source=generator" width="99%" height="230" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
