resized about me paragraph

--- a/aboutme.html
+++ b/aboutme.html
@@ -119,16 +119,19 @@
                     I’m a recent Computer Science graduate from UC San Diego
                     with a fascination for thoughtful and innovative design. I 
                     believe in crafting meaningful solutions that can help 
-                    empower people to live more fulfilling lives. <br>
+                    empower people to live more fulfilling lives.
+                    I'm currently a UX designer in training and working on
+                    projects in product design and web development.<br>
                   </div>
-                  <div class ="about-paragraph">
+                  <!--                   <div class ="about-paragraph">
                     I'm currently a UX designer in training and working on
                     projects in product design and web development. Aside from
-                    design, you can find me running, exploring nature, practicing photography, editing videos, or sifting through my Spotify playlists.
-                  </div>
+                    design, you can find me running, exploring nature, practicing photography, or editing videos.
+                  </div> -->
                   <div class ="about-paragraph">
-                    I'm always excited to collaborate and build new experiences. Feel free to reach me at: <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
-                    If you'd like to get a better idea of who I am, you can learn more below!
+                    I'm always excited to collaborate and build new experiences. To get a better idea of who I am and
+                    how I think, feel free to learn more below or reach me at: 
+                    <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
                     <!-- <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
                     style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> <u>✉️</u></a> -->
                     <br> <br>
@@ -183,7 +186,7 @@
                 <!-- ========== Added Instagram ========== -->
                 <div class="instagram-container">
                   <div class="instagram-title-box">
-                    <a class="instagram-title" href="http://instagram.com/irenelue" target="_blank" title="Instagram"> SOME OF MY FAVORITE MEMORIES:  </a>
+                    <a class="instagram-title" href="http://instagram.com/irenelue" target="_blank" title="Instagram"> SOME OF MY FAVORITE MEMORIES  </a>
                   </div>
                   <div class="row">
                     <div class="column">
@@ -219,7 +222,7 @@
                 <!-- ========== Added Spotify ========== -->
                 <div class="instagram-container">
                   <div class="instagram-title-box">
-                    <a class="instagram-title" href="https://open.spotify.com/user/lueirene" style="margin-top:0px" target="_blank" title="Spotify"> WHAT I'VE BEEN LISTENING TO: </a>
+                    <a class="instagram-title" href="https://open.spotify.com/user/lueirene" style="margin-top:0px" target="_blank" title="Spotify"> WHAT I'VE BEEN LISTENING TO </a>
                   </div>
                   <div class="spotify-container">
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0riyEjwFO7vIR8hhvyk700?utm_source=generator" width="99%" height="230" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
