--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
-          <li><a class="nav-link scrollto" href="#portfolio" title="WORK">WORK</a></li>
-          <li><a href="aboutme.html" title="ABOUT">ABOUT</a></li>
-          <li><a href="https://drive.google.com/file/d/1GMUk7ibuRWoxnIl7mP8IHJxXJzCyPHnN/view?usp=sharing" title="RESUME" target="_blank">RESUME</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio" title="WORK">Work</a></li>
+          <li><a href="aboutme.html" title="ABOUT">About</a></li>
+          <li><a href="https://drive.google.com/file/d/1GMUk7ibuRWoxnIl7mP8IHJxXJzCyPHnN/view?usp=sharing" title="RESUME" target="_blank">Resume</a></li>
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -192,7 +192,7 @@
         <div class="row portfolio-container">
           <!-- Proj 1: Covid-Code -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank" title="COVIDCODE">
+            <a href="under_construction.html" target="blank" title="CovidCode">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
@@ -217,7 +217,7 @@
 
           <!-- Proj 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank" title="POMO">
+            <a href="under_construction.html" target="blank" title="Pomolo">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
@@ -232,7 +232,7 @@
 
           <!-- Proj 3 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank" title="COMING SOON ">
+            <a href="under_construction.html" target="blank" title="Sketch">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
