--- a/aboutme.html
+++ b/aboutme.html
@@ -142,15 +142,10 @@
               <a href="https://www.behance.net/irene_lue"  class="class1" target="_blank" class="linkedin" title="Behance"><i class="fab fa-behance"></i></a>
 
             </div>
-            <!-- <div class = "about-link"> 
-              You can view my full resume
-              <a class="cta-btn" href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" 
-              style="color:blue" target="_blank"><u>here</u></a>!
-            </div> -->
           </div>
 
           <!-- ========== Added books, movies, learning ========== -->
-<!--                 <div class="books-container1">
+          <div class="books-container1">
             <div class="instagram-title-box">
               <div class="books-title"> 3 BOOKS:  </div>
             </div>
@@ -179,9 +174,66 @@
               2. Animation <br>
               3. Taiwanese
             </div>   
-          </div>      -->     
+          </div>         
+
+          <!-- ========== Added books/movies/etc ========== -->
+          <div class="instagram-container">
+            <div class="instagram-title-box">
+              <div class="instagram-title" style="margin-bottom:10px" title="Instagram"> A FEW THINGS I LOVE </a>
+            </div>
+            <div class="row">
+              <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
+                <div class="row" style="margin-top: -52px">
+                  <!-- pic 1 -->
+                  <div class="column" class="img-fluid">
+                    <div class="image">
+                      <img src="assets/img/things/test.jpeg" class="img-fluid" alt="">
+                      <div class="image_overlay">
+                          <div class="image_title2">HOBBIES</div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- pic 2 -->
+                  <div class="column" class="img-fluid">
+                    <div class="image">
+                      <img src="assets/img/things/test.jpeg" class="img-fluid" alt="">
+                      <div class="image_overlay">
+                          <div class="image_title2">BOOKS</div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- pic 3 -->
+                  <div class="column" class="img-fluid">
+                    <div class="image">
+                      <img src="assets/img/things/taiwan.jpg" class="img-fluid" alt="">
+                      <div class="image_overlay">
+                          <div class="image_title2">MOVIES</div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- pic 4 -->
+                  <div class="column" class="img-fluid">
+                    <div class="image">
+                      <img src="assets/img/things/test.jpeg" class="img-fluid" alt="">
+                      <div class="image_overlay">
+                          <div class="image_title2">QUOTES</div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- pic 5 -->
+                  <div class="column" class="img-fluid">
+                    <div class="image">
+                      <img src="assets/img/things/test.jpeg" class="img-fluid" alt="">
+                      <div class="image_overlay">
+                          <div class="image_title2">QUOTES</div>
+                      </div>
+                    </div>
+                  </div>
+              </section>
+            </div>
+          <!-- end of books/movies/etc -->
           
-          <!-- ========== Added hobbies ========== -->
+          <!-- ========== Added Instagram ========== -->
           <div class="instagram-container">
             <div class="instagram-title-box">
               <a class="instagram-title" href="http://instagram.com/irenelue" target="_blank" title="Instagram"> INSTAGRAM </a>
@@ -195,7 +247,7 @@
                       <div class="image">
                         <img src="assets/img/insta/waikiki.jpg" class="img-fluid" alt="">
                         <div class="image_overlay">
-                            <div class="image_title2">"☀️🤍🌊"</div>
+                            <div class="image_title2">☀️🤍🌊</div>
                         </div>
                       </div>
                     </a>
@@ -206,7 +258,7 @@
                       <div class="image">
                         <img src="assets/img/insta/haleakala.jpg" class="img-fluid" alt="">
                         <div class="image_overlay">
-                            <div class="image_title2">"On top of the world w Thelma and Louise!"</div>
+                            <div class="image_title2">ON TOP OF THE WORLD W THELMA & LOUISE!</div>
                         </div>
                       </div>
                     </a>
@@ -217,7 +269,7 @@
                       <div class="image">
                         <img src="assets/img/insta/grad.jpg" class="img-fluid" alt="">
                         <div class="image_overlay">
-                            <div class="image_title2">"That's that! Thank you SD! 🎓🔱💛"</div>
+                            <div class="image_title2">THAT'S THAT! THANK YOU SD! 🎓🔱💛</div>
                         </div>
                       </div>
                     </a>
@@ -228,16 +280,16 @@
                       <div class="image">
                         <img src="assets/img/insta/post5.jpg" class="img-fluid" alt="">
                         <div class="image_overlay">
-                            <div class="image_title2">"My sweet girl🤍"</div>
+                            <div class="image_title2">MY SWEET GIRL🤍</div>
                         </div>
                       </div>
                     </a>
                   </div>
               </section>
             </div>
-          <!-- end of hobbies container -->
+          <!-- end of Instagram container -->
       
-          <!-- ========== Added Instagram ========== -->
+          <!-- ========== Instagram format 2 ========== -->
 <!--                 <div class="instagram-container">
             <div class="instagram-title-box">
               <a class="instagram-title" href="http://instagram.com/irenelue" target="_blank" title="Instagram"> INSTAGRAM </a>
