fixed weird instagram resisiz

--- a/aboutme.html
+++ b/aboutme.html
@@ -145,7 +145,7 @@
           </div>
 
           <!-- ========== Added books, movies, learning ========== -->
-          <div class="books-container1">
+<!--           <div class="books-container1">
             <div class="instagram-title-box">
               <div class="books-title"> 3 BOOKS:  </div>
             </div>
@@ -174,12 +174,12 @@
               2. Animation <br>
               3. Taiwanese
             </div>   
-          </div>         
+          </div>  -->        
 
           <!-- ========== Added books/movies/etc ========== -->
           <div class="instagram-container">
             <div class="instagram-title-box">
-              <div class="instagram-title" style="margin-bottom:10px" title="Instagram"> A FEW THINGS I LOVE </a>
+              <div class="instagram-title" style="margin-bottom:10px" title="A few things I love"> A FEW THINGS I LOVE </a>
             </div>
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
@@ -205,7 +205,7 @@
                   <!-- pic 3 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/taiwan.jpg" class="img-fluid" alt="">
+                      <img src="assets/img/things/test.jpeg" class="img-fluid" alt="">
                       <div class="image_overlay">
                           <div class="image_title2">MOVIES</div>
                       </div>
@@ -225,10 +225,11 @@
                     <div class="image">
                       <img src="assets/img/things/test.jpeg" class="img-fluid" alt="">
                       <div class="image_overlay">
-                          <div class="image_title2">QUOTES</div>
+                          <div class="image_title2">BOOKS</div>
                       </div>
                     </div>
                   </div>
+                </div>
               </section>
             </div>
           <!-- end of books/movies/etc -->
@@ -240,9 +241,11 @@
             </div>
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
-                <div class="row portfolio-container" style="margin-top: -52px">
+                <!-- <div class="row portfolio-container" style="margin-top: -52px"> -->
+                <div class="row" style="margin-top: -52px">
                   <!-- pic 1 -->
-                  <div class="col-lg-3 col-md-3 portfolio-item" class="img-fluid">
+                  <!-- <div class="col-lg-3 col-md-3 portfolio-item" class="img-fluid"> -->
+                  <div class="column" class="img-fluid">
                     <a href="https://www.instagram.com/p/CZgd6uiLW6u/" target="blank">
                       <div class="image">
                         <img src="assets/img/insta/waikiki.jpg" class="img-fluid" alt="">
@@ -253,7 +256,8 @@
                     </a>
                   </div>
                   <!-- pic 2 -->
-                  <div class="col-lg-3 col-md-3 portfolio-item" class="img-fluid">
+                  <!-- <div class="col-lg-3 col-md-3 portfolio-item" class="img-fluid"> -->
+                  <div class="column" class="img-fluid">
                     <a href="https://www.instagram.com/p/CYYXa_yralI/" target="blank">
                       <div class="image">
                         <img src="assets/img/insta/haleakala.jpg" class="img-fluid" alt="">
@@ -264,18 +268,32 @@
                     </a>
                   </div>
                   <!-- pic 3 -->
-                  <div class="col-lg-3 col-md-3 portfolio-item" class="img-fluid">
+                  <!-- <div class="col-lg-3 col-md-3 portfolio-item" class="img-fluid"> -->
+                  <div class="column" class="img-fluid">
                     <a href="https://www.instagram.com/p/CQKL4pJlyqx/" target="blank">
                       <div class="image">
                         <img src="assets/img/insta/grad.jpg" class="img-fluid" alt="">
                         <div class="image_overlay">
-                            <div class="image_title2">THAT'S THAT! THANK YOU SD! 🎓🔱💛</div>
+                            <div class="image_title2">THAT'S THAT! <br> THANK YOU SD! 🎓🔱💛</div>
                         </div>
                       </div>
                     </a>
                   </div>
+                  <!-- pic 3 -->
+                  <!-- <div class="col-lg-3 col-md-3 portfolio-item" class="img-fluid"> -->
+                  <div class="column" class="img-fluid"><a href="https://www.instagram.com/p/CQKL4pJlyqx/" target="blank">
+                      <div class="image">
+                        <img src="assets/img/insta/taiwan.jpg" class="img-fluid" alt="">
+                        <div class="image_overlay">
+                            <div class="image_title2"> TAIWAN </div>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+
                   <!-- pic 4 -->
-                  <div class="col-lg-3 col-md-3 portfolio-item" class="img-fluid">
+                  <!-- <div class="col-lg-3 col-md-3 portfolio-item" class="img-fluid"> -->
+                  <div class="column" class="img-fluid">
                     <a href="https://www.instagram.com/p/BPJB8NdA20j/" target="blank">
                       <div class="image">
                         <img src="assets/img/insta/post5.jpg" class="img-fluid" alt="">
@@ -285,6 +303,19 @@
                       </div>
                     </a>
                   </div>
+                  
+                  <!-- pic 5 -->
+                  <!-- <div class="col-lg-3 col-md-3 portfolio-item" class="img-fluid">
+                    <a href="https://www.instagram.com/p/BPJB8NdA20j/" target="blank">
+                      <div class="image">
+                        <img src="assets/img/insta/post5.jpg" class="img-fluid" alt="">
+                        <div class="image_overlay">
+                            <div class="image_title2">MY SWEET GIRL🤍</div>
+                        </div>
+                      </div>
+                    </a>
+                  </div> -->
+                </div>
               </section>
             </div>
           <!-- end of Instagram container -->
