--- a/aboutme.html
+++ b/aboutme.html
@@ -179,7 +179,7 @@
           <!-- ========== Added books/movies/etc ========== -->
           <div class="instagram-container">
             <div class="instagram-title-box">
-              <div class="instagram-title" style="margin-bottom:10px" title="A few things I love"> A FEW THINGS I LOVE </a>
+              <div class="books-title" style="margin-bottom:10px" title="Favorite things"> ABOUT ME </a>
             </div>
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
@@ -187,45 +187,88 @@
                   <!-- pic 1 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/test.jpeg" class="img-fluid" alt="">
-                      <div class="image_overlay">
-                          <div class="image_title2">HOBBIES</div>
+                      <img src="assets/img/things/test.png" class="img-fluid" alt="">             
+                      <div class="books-middle"> HOBBIES </div>
+                      <div class="books-list">
+                        <ol>
+                          <li> RUNNING </li>
+                          <li> LISTENING TO MUSIC </li>
+                          <li> PHOTOGRAPHY </li>
+                          <li> TRAVELING </li>
+                          <li> SKETCHING </li>
+                        </ol>
                       </div>
                     </div>
                   </div>
                   <!-- pic 2 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/test.jpeg" class="img-fluid" alt="">
-                      <div class="image_overlay">
-                          <div class="image_title2">BOOKS</div>
+                      <img src="assets/img/things/test.png" class="img-fluid" alt="">
+                      <div class="books-middle"> BOOKS </div>
+                      <div class="books-list">
+                        <ol>
+                          <li> DEEP WORK </li>
+                          <li> ATOMIC HABITS </li>
+                          <li> CAN'T HURT ME </li>
+                        </ol>
                       </div>
+                      <!-- <div class="image_overlay">
+                          <div class="image_title2">BOOKS</div>
+                      </div> -->
                     </div>
                   </div>
                   <!-- pic 3 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/test.jpeg" class="img-fluid" alt="">
-                      <div class="image_overlay">
-                          <div class="image_title2">MOVIES</div>
+                      <img src="assets/img/things/test.png" class="img-fluid" alt="">
+                      <div class="books-middle"> FILMS </div>
+                      <div class="books-list">
+                        <ol>
+                          <li> PURSUIT OF HAPPYNESS </li>
+                          <li> E.T. </li>
+                          <li> STAND BY ME </li>
+                          <li> WHILE YOU WERE SLEEPING </li>
+                          <li> HARRY POTTER </li>
+                        </ol>
                       </div>
+                      <!-- <div class="image_overlay">
+                          <div class="image_title2">BOOKS</div>
+                      </div> -->
                     </div>
                   </div>
                   <!-- pic 4 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/test.jpeg" class="img-fluid" alt="">
-                      <div class="image_overlay">
-                          <div class="image_title2">QUOTES</div>
+                      <img src="assets/img/things/test.png" class="img-fluid" alt="">
+                      <div class="books-middle"> ANIMATIONS </div>
+                      <!-- <div class="image_overlay">
+                          <div class="image_title2">BOOKS</div>
+                      </div> -->
+                      <div class="books-list">
+                        <ol>
+                          <li> FROM UP ON POPPY HILL </li>
+                          <li> YOUR NAME </li>
+                          <li> BAO </li>
+                          <li> WALL-E </li>
+                          <li> GRAVE OF THE FIREFLIES </li>
+                        </ol>
                       </div>
                     </div>
                   </div>
                   <!-- pic 5 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/test.jpeg" class="img-fluid" alt="">
-                      <div class="image_overlay">
+                      <img src="assets/img/things/test.png" class="img-fluid" alt="">
+                      <div class="books-middle"> QUOTES </div>
+                      <!-- <div class="image_overlay">
                           <div class="image_title2">BOOKS</div>
+                      </div> -->
+                      <div class="books-list2">
+                        <ol>
+                          <li> "START EARLY, START OFTEN" </li> <br>
+                          <li> "DON'T LET THE FEAR OF STRIKING OUT KEEP YOU FROM PLAYING THE GAME." </li> <br>
+                          <li> "SMILE MY BOY, IT'S SUNRISE."</li>
+                      </ol> 
                       </div>
                     </div>
                   </div>
@@ -236,7 +279,7 @@
           
           <!-- ========== Added Instagram ========== -->
           <div class="instagram-container">
-            <div class="instagram-title-box">
+            <div class="instagram-title-box" style="margin-top:90px">
               <a class="instagram-title" href="http://instagram.com/irenelue" target="_blank" title="Instagram"> INSTAGRAM </a>
             </div>
             <div class="row">
@@ -250,7 +293,7 @@
                       <div class="image">
                         <img src="assets/img/insta/waikiki.jpg" class="img-fluid" alt="">
                         <div class="image_overlay">
-                            <div class="image_title2">☀️🤍🌊</div>
+                          <div class="image_title2">☀️🤍🌊</div>
                         </div>
                       </div>
                     </a>
@@ -281,11 +324,11 @@
                   </div>
                   <!-- pic 3 -->
                   <!-- <div class="col-lg-3 col-md-3 portfolio-item" class="img-fluid"> -->
-                  <div class="column" class="img-fluid"><a href="https://www.instagram.com/p/CQKL4pJlyqx/" target="blank">
+                  <div class="column" class="img-fluid"><a href="https://www.instagram.com/p/BJYBuEwA4Fj/" target="blank">
                       <div class="image">
                         <img src="assets/img/insta/taiwan.jpg" class="img-fluid" alt="">
                         <div class="image_overlay">
-                            <div class="image_title2"> TAIWAN </div>
+                            <div class="image_title2"> 💙🇹🇼❤️</div>
                         </div>
                       </div>
                     </a>
@@ -358,7 +401,7 @@
         
           <!-- ========== Added Spotify ========== -->
           <div class="instagram-container">
-            <div class="instagram-title-box">
+            <div class="instagram-title-box" style="margin-top:90px">
               <a class="instagram-title" href="https://open.spotify.com/user/lueirene" style="margin-top:0px" target="_blank" title="Spotify"> SPOTIFY </a>
             </div>
             <div class="spotify-container">
