--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
-          <li><a class="nav-link scrollto" href="#portfolio" title="WORK">Work</a></li>
-          <li><a href="aboutme.html" title="ABOUT">About</a></li>
-          <li><a href="https://drive.google.com/file/d/1GMUk7ibuRWoxnIl7mP8IHJxXJzCyPHnN/view?usp=sharing" title="RESUME" target="_blank">Resume</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio" title="Work">WORK</a></li>
+          <li><a href="aboutme.html" title="About">ABOUT</a></li>
+          <li><a href="https://drive.google.com/file/d/1GMUk7ibuRWoxnIl7mP8IHJxXJzCyPHnN/view?usp=sharing" title="Resume" target="_blank">RESUME</a></li>
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
