--- a/under_construction.html
+++ b/under_construction.html
@@ -90,12 +90,12 @@
 				<nav id="navbar" class="navbar">
 					<ul>
 						<!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
-						<li><a href="index.html" title="WORK">WORK</a></li>
-						<li><a href="aboutme.html" title="ABOUT">ABOUT</a></li>
+						<li><a href="index.html" title="Work">WORK</a></li>
+						<li><a href="aboutme.html" title="About">ABOUT</a></li>
 						<li>
 							<a
 								href="https://drive.google.com/file/d/1GMUk7ibuRWoxnIl7mP8IHJxXJzCyPHnN/view?usp=sharing"
-								title="RESUME"
+								title="Resume"
 								target="_blank"
 								>RESUME</a
 							>
