--- a/aboutme.html
+++ b/aboutme.html
@@ -179,7 +179,7 @@
           <!-- ========== Added books/movies/etc ========== -->
           <div class="instagram-container">
             <div class="instagram-title-box">
-              <div class="books-title" style="margin-bottom:10px" title="Favorite things"> ABOUT ME </a>
+              <div class="books-title" style="margin-bottom:10px" title="Favorite things"> GET TO KNOW ME BETTER </a>
             </div>
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
