added hobbies, books, movies section

--- a/aboutme.html
+++ b/aboutme.html
@@ -267,7 +267,7 @@
                         <ol>
                           <li> "START EARLY, START OFTEN" </li> <br>
                           <li> "DON'T LET THE FEAR OF STRIKING OUT KEEP YOU FROM PLAYING THE GAME." </li> <br>
-                          <li> "SMILE MY BOY, IT'S SUNRISE."</li>
+                          <li> "SEIZE THE DAY. MAKE YOUR LIVES EXTRAORDINARY."</li>
                       </ol> 
                       </div>
                     </div>
