--- a/aboutme.html
+++ b/aboutme.html
@@ -179,7 +179,7 @@
           <!-- ========== Added books/movies/etc ========== -->
           <div class="instagram-container">
             <div class="instagram-title-box">
-              <div class="books-title" style="margin-bottom:10px" title="Favorite things"> GET TO KNOW ME BETTER </a>
+              <div class="books-title" style="margin-bottom:10px" title="Get to know me"> GET TO KNOW ME </div>
             </div>
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
@@ -187,7 +187,7 @@
                   <!-- pic 1 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/test.png" class="img-fluid" alt="">             
+                      <img src="assets/img/things/hobbies.jpg" class="img-fluid" alt="">             
                       <div class="books-middle"> HOBBIES </div>
                       <div class="books-list">
                         <ol>
@@ -203,7 +203,7 @@
                   <!-- pic 2 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/test.png" class="img-fluid" alt="">
+                      <img src="assets/img/things/books.jpg" class="img-fluid" alt="">
                       <div class="books-middle"> BOOKS </div>
                       <div class="books-list">
                         <ol>
@@ -220,15 +220,15 @@
                   <!-- pic 3 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/test.png" class="img-fluid" alt="">
+                      <img src="assets/img/things/movies.jpg" class="img-fluid" alt="">
                       <div class="books-middle"> FILMS </div>
                       <div class="books-list">
                         <ol>
                           <li> PURSUIT OF HAPPYNESS </li>
                           <li> E.T. </li>
-                          <li> STAND BY ME </li>
-                          <li> WHILE YOU WERE SLEEPING </li>
                           <li> HARRY POTTER </li>
+                          <li> BIG </li>
+                          <li> WHILE YOU WERE SLEEPING </li>
                         </ol>
                       </div>
                       <!-- <div class="image_overlay">
@@ -239,18 +239,18 @@
                   <!-- pic 4 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/test.png" class="img-fluid" alt="">
+                      <img src="assets/img/things/anime.jpg" class="img-fluid" alt="">
                       <div class="books-middle"> ANIMATIONS </div>
                       <!-- <div class="image_overlay">
                           <div class="image_title2">BOOKS</div>
                       </div> -->
                       <div class="books-list">
                         <ol>
-                          <li> FROM UP ON POPPY HILL </li>
-                          <li> YOUR NAME </li>
+                          <li> KIMI NO NA WA </li>
+                          <li> UP </li>
                           <li> BAO </li>
                           <li> WALL-E </li>
-                          <li> GRAVE OF THE FIREFLIES </li>
+                          <li> FROM UP ON POPPY HILL </li>
                         </ol>
                       </div>
                     </div>
@@ -258,14 +258,14 @@
                   <!-- pic 5 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/test.png" class="img-fluid" alt="">
+                      <img src="assets/img/things/quotes.jpg" class="img-fluid" alt="">
                       <div class="books-middle"> QUOTES </div>
                       <!-- <div class="image_overlay">
                           <div class="image_title2">BOOKS</div>
                       </div> -->
                       <div class="books-list2">
                         <ol>
-                          <li> "START EARLY, START OFTEN" </li> <br>
+                          <li> "START EARLY, START OFTEN." </li> <br>
                           <li> "DON'T LET THE FEAR OF STRIKING OUT KEEP YOU FROM PLAYING THE GAME." </li> <br>
                           <li> "SEIZE THE DAY. MAKE YOUR LIVES EXTRAORDINARY."</li>
                       </ol> 
@@ -275,6 +275,7 @@
                 </div>
               </section>
             </div>
+          </div>
           <!-- end of books/movies/etc -->
           
           <!-- ========== Added Instagram ========== -->
@@ -361,6 +362,7 @@
                 </div>
               </section>
             </div>
+          </div>
           <!-- end of Instagram container -->
       
           <!-- ========== Instagram format 2 ========== -->
