completed hobbies section

--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
 
           <!-- Proj 3 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank" title="Sketch">
+            <a href="under_construction.html" target="blank" title="Photography">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> SKETCH </div>
+                    <div class="image_title"> PHOTOGRAPHY </div>
                     <p class="image_description">
                       [ COMING SOON ]
                     </p>
