completed hobbies section

--- a/aboutme.html
+++ b/aboutme.html
@@ -195,7 +195,7 @@
                           <li> LISTENING TO MUSIC </li>
                           <li> PHOTOGRAPHY </li>
                           <li> TRAVELING </li>
-                          <li> SKETCHING </li>
+                          <li> ANYTHING OUTDOORS </li>
                         </ol>
                       </div>
                     </div>
