completed hobbies section

--- a/aboutme.html
+++ b/aboutme.html
@@ -192,10 +192,8 @@
                       <div class="books-list">
                         <ol>
                           <li> RUNNING </li>
-                          <li> LISTENING TO MUSIC </li>
                           <li> PHOTOGRAPHY </li>
-                          <li> TRAVELING </li>
-                          <li> ANYTHING OUTDOORS </li>
+                          <li> VIDEO EDITING </li>
                         </ol>
                       </div>
                     </div>
@@ -225,10 +223,8 @@
                       <div class="books-list">
                         <ol>
                           <li> PURSUIT OF HAPPYNESS </li>
-                          <li> E.T. </li>
                           <li> HARRY POTTER </li>
-                          <li> BIG </li>
-                          <li> WHILE YOU WERE SLEEPING </li>
+                          <li> FROM UP ON POPPY HILL </li>
                         </ol>
                       </div>
                       <!-- <div class="image_overlay">
@@ -240,17 +236,15 @@
                   <div class="column" class="img-fluid">
                     <div class="image">
                       <img src="assets/img/things/anime.jpg" class="img-fluid" alt="">
-                      <div class="books-middle"> ANIMATIONS </div>
+                      <div class="books-middle"> LEARNING </div>
                       <!-- <div class="image_overlay">
                           <div class="image_title2">BOOKS</div>
                       </div> -->
                       <div class="books-list">
                         <ol>
-                          <li> KIMI NO NA WA </li>
-                          <li> UP </li>
-                          <li> BAO </li>
-                          <li> WALL-E </li>
-                          <li> FROM UP ON POPPY HILL </li>
+                          <li> MANDARIN </li>
+                          <li> HOME IMPROVEMENT </li>
+                          <li> GARDENING </li>
                         </ol>
                       </div>
                     </div>
