completed hobbies section

--- a/aboutme.html
+++ b/aboutme.html
@@ -193,8 +193,11 @@
                         <ol>
                           <li> RUNNING </li>
                           <li> PHOTOGRAPHY </li>
-                          <li> VIDEO EDITING </li>
+                          <li> TRAVELING </li>
                         </ol>
+                      </div>
+                      <div class="image_overlay">
+                        <div class="image_title3">🤍</div>
                       </div>
                     </div>
                   </div>
@@ -209,6 +212,9 @@
                           <li> ATOMIC HABITS </li>
                           <li> CAN'T HURT ME </li>
                         </ol>
+                      </div>
+                      <div class="image_overlay">
+                        <div class="image_title3">📖</div>
                       </div>
                       <!-- <div class="image_overlay">
                           <div class="image_title2">BOOKS</div>
@@ -227,6 +233,9 @@
                           <li> FROM UP ON POPPY HILL </li>
                         </ol>
                       </div>
+                      <div class="image_overlay">
+                        <div class="image_title3">🎞</div>
+                      </div>
                       <!-- <div class="image_overlay">
                           <div class="image_title2">BOOKS</div>
                       </div> -->
@@ -243,9 +252,12 @@
                       <div class="books-list">
                         <ol>
                           <li> MANDARIN </li>
+                          <li> ANIMATION </li>
                           <li> HOME IMPROVEMENT </li>
-                          <li> GARDENING </li>
                         </ol>
+                      </div>
+                      <div class="image_overlay">
+                        <div class="image_title3">💡</div>
                       </div>
                     </div>
                   </div>
@@ -262,7 +274,10 @@
                           <li> "START EARLY, START OFTEN." </li> <br>
                           <li> "DON'T LET THE FEAR OF STRIKING OUT KEEP YOU FROM PLAYING THE GAME." </li> <br>
                           <li> "SEIZE THE DAY. MAKE YOUR LIVES EXTRAORDINARY."</li>
-                      </ol> 
+                        </ol> 
+                      </div>
+                      <div class="image_overlay">
+                        <div class="image_title3">💬</div>
                       </div>
                     </div>
                   </div>
