changed quotes to causes

--- a/aboutme.html
+++ b/aboutme.html
@@ -228,9 +228,9 @@
                       <div class="books-middle"> FILMS </div>
                       <div class="books-list">
                         <ol>
-                          <li> PURSUIT OF HAPPYNESS </li>
-                          <li> HARRY POTTER </li>
                           <li> FROM UP ON POPPY HILL </li>
+                          <li> HARRY POTTER </li>
+                          <li> PURSUIT OF HAPPYNESS </li>
                         </ol>
                       </div>
                       <div class="image_overlay">
@@ -251,9 +251,9 @@
                       </div> -->
                       <div class="books-list">
                         <ol>
-                          <li> MANDARIN </li>
+                          <li> MANDARIN </li> 
+                          <li> HOME IMPROVEMENT </li> 
                           <li> ANIMATION </li>
-                          <li> HOME IMPROVEMENT </li>
                         </ol>
                       </div>
                       <div class="image_overlay">
@@ -265,19 +265,19 @@
                   <div class="column" class="img-fluid">
                     <div class="image">
                       <img src="assets/img/things/quotes.jpg" class="img-fluid" alt="">
-                      <div class="books-middle"> QUOTES </div>
+                      <div class="books-middle"> CAUSES </div>
                       <!-- <div class="image_overlay">
                           <div class="image_title2">BOOKS</div>
                       </div> -->
-                      <div class="books-list2">
-                        <ol>
-                          <li> "START EARLY, START OFTEN." </li> <br>
-                          <li> "DON'T LET THE FEAR OF STRIKING OUT KEEP YOU FROM PLAYING THE GAME." </li> <br>
-                          <li> "SEIZE THE DAY. MAKE YOUR LIVES EXTRAORDINARY."</li>
+                      <div class="books-list"> 
+                        <ol>        
+                          <li> ENVIRONMENTALISM </li>
+                          <li> ANIMAL WELFARE </li>
+                          <li> MENTAL HEALTH </li>    
                         </ol> 
                       </div>
                       <div class="image_overlay">
-                        <div class="image_title3">💬</div>
+                        <div class="image_title3">🌎</div>
                       </div>
                     </div>
                   </div>
