changed quotes to causes

--- a/aboutme.html
+++ b/aboutme.html
@@ -116,10 +116,11 @@
             <div class ="about-paragraph2">
               I’m a recent Computer Science graduate from UC San Diego
               with a fascination for thoughtful and innovative design. I 
-              believe in crafting meaningful solutions that can help 
+              believe in crafting solutions that are meaningful and can help 
               empower people to live more fulfilling lives.
               I'm currently a UX designer in training and working on
-              projects in product design and web development.<br>
+              projects in product design and web development. 
+              Aside from design, you can find me outside on a run, hiking, or exploring LA. 
             </div>
             <!--                   <div class ="about-paragraph">
               I'm currently a UX designer in training and working on
@@ -127,9 +128,9 @@
               design, you can find me running, exploring nature, practicing photography, or editing videos.
             </div> -->
             <div class ="about-paragraph2">
-              I'm always excited to collaborate and build new experiences. To get a better idea of who I am and
-              how I think, feel free to learn more below or reach me at: 
+              I'm always excited to collaborate and build new experiences, if you'd like to get in touch, you can reach me at: 
               <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
+  
               <!-- <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
               style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> <u>✉️</u></a> -->
               <br> <br>
@@ -273,7 +274,7 @@
                         <ol>        
                           <li> ENVIRONMENTALISM </li>
                           <li> ANIMAL WELFARE </li>
-                          <li> MENTAL HEALTH </li>    
+                          <li> HUMAN RIGHTS </li>    
                         </ol> 
                       </div>
                       <div class="image_overlay">
