--- a/aboutme.html
+++ b/aboutme.html
@@ -412,7 +412,7 @@
 
         
           <!-- ========== Added Spotify ========== -->
-          <div class="instagram-container">
+<!--           <div class="instagram-container">
             <div class="instagram-title-box" style="margin-top:90px">
               <a class="instagram-title" href="https://open.spotify.com/user/lueirene" style="margin-top:0px" target="_blank" title="Spotify"> SPOTIFY </a>
             </div>
@@ -425,7 +425,7 @@
             <div class="spotify-container3">
               <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5ZkWwLZPasBbWyJdpVc5RK?utm_source=generator" width="99%" height="230" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>          
             </div>
-          </div>
+          </div> -->
           <!-- end of spotify container 
 
           <!-- ========== Added books, movies, learning ========== -->
