--- a/aboutme.html
+++ b/aboutme.html
@@ -116,17 +116,12 @@
             <div class ="about-paragraph2">
               I’m a recent Computer Science graduate from UC San Diego
               with a fascination for thoughtful and innovative design. I 
-              believe in crafting solutions that are meaningful and can help 
-              empower people to live more fulfilling lives.
-              I'm currently a UX designer in training and working on
+              believe in crafting solutions that are long-lasting, resolve human needs, and can help 
+              people to live more fulfilling lives. I'm currently a UX designer in training and working on
               projects in product design and web development. 
               Aside from design, you can find me outside on a run, hiking, or exploring LA. 
-            </div>
-            <!--                   <div class ="about-paragraph">
-              I'm currently a UX designer in training and working on
-              projects in product design and web development. Aside from
-              design, you can find me running, exploring nature, practicing photography, or editing videos.
-            </div> -->
+              </div>
+
             <div class ="about-paragraph2">
               I'm always excited to collaborate and build new experiences, if you'd like to get in touch, you can reach me at: 
               <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
@@ -193,7 +188,7 @@
                       <div class="books-list">
                         <ol>
                           <li> RUNNING </li>
-                          <li> PHOTOGRAPHY </li>
+                          <li> VIDEO EDITING </li>
                           <li> TRAVELING </li>
                         </ol>
                       </div>
