--- a/under_construction.html
+++ b/under_construction.html
@@ -123,10 +123,7 @@
 				</div>
 				<div class="content">
 					<h1>COMING SOON</h1>
-					<!-- 					<h3>
-						This site is under construction, <br />
-						hope to see you again soon!
-					</h3> -->
+					<h3>Stay tuned!</h3>
 					<!-- <a href="#about" class="btn">Read More</a> -->
 					<a
 						href="https://www.linkedin.com/in/irenelue/"
