updated hobbies pics

--- a/aboutme.html
+++ b/aboutme.html
@@ -189,7 +189,7 @@
                         <ol>
                           <li> RUNNING </li>
                           <li> VIDEO EDITING </li>
-                          <li> TRAVELING </li>
+                          <li> WEIGHTLIFTING </li>
                         </ol>
                       </div>
                       <div class="image_overlay">
