--- a/aboutme.html
+++ b/aboutme.html
@@ -188,8 +188,8 @@
                       <div class="books-list">
                         <ol>
                           <li> RUNNING </li>
-                          <li> VIDEO EDITING </li>
                           <li> WEIGHTLIFTING </li>
+                          <li> ANYTHING OUTDOORS </li>
                         </ol>
                       </div>
                       <div class="image_overlay">
