--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  
 
   <!-- ADDED: font awesome CSS -->
   <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
@@ -118,10 +119,24 @@
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
       <br>
-      <h1> HELLO, I'M IRENE! 👋 </h1>
-      <!-- <h2> Recent Computer Science graduate from UC San Diego based in LA. </h2> -->
-      <h2> Recent Computer Science graduate from UC San Diego and
-      designer creating digital experiences in Los Angeles, CA. </h2> 
+      <h1 class="logo"><a href="rotate.html" title="Home">  IRENE LUE </a> </h1>
+      <!-- <h1> . </h1> -->
+      <body>
+        <div class="wrapper-rotate" >
+          <div class="words-rotate">
+            <span class="rotate-text"> HELLO, I'M IRENE! 👋 </span>
+            <span class="rotate-text"> NI HAO, WO SHI IRENE! 👋 </span>
+            <span class="rotate-text"> BONJOUR, JE SUIS IRENE! 👋 </span>
+            <span class="rotate-text"> HOLA, SOY IRENE! 👋 </span>
+            <span class="rotate-text"> KON'NICHIWA, WATASHI WA IRENE! 👋 </span>
+            <span class="rotate-text"> HALLO, ICH BIN IRENE! 👋 </span>
+            <span class="rotate-text"> ! 👋 </span>
+          </div>
+        </div>
+        <!-- <h1> I'M IRENE! 👋 </h1> -->
+      </body>
+     <h2> Recent Computer Science graduate from UC San Diego and
+      designer creating digital experiences in Los Angeles, CA. </h2>
       <!-- <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a>
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script> -->
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
@@ -182,13 +197,7 @@
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container">
-        <div class="section-title">
-          <!-- <h2>Portfolio</h2> -->
-          <!-- <h3>Check Out <span> My Portfolio</span></h3> -->
-          <!-- <h3> What I've been working on <br> </h3> -->
-          <!-- <h3>Featured Projects</h3> -->
-          <!-- <p style="font-size:105%"> My featured works and projects </p> --> 
-        </div>
+
         <div class="row portfolio-container">
           <!-- Proj 1: Covid-Code -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
