added multilingual header

--- a/index.html
+++ b/index.html
@@ -125,12 +125,16 @@
         <div class="wrapper-rotate" >
           <div class="words-rotate">
             <span class="rotate-text"> HELLO, I'M IRENE! 👋 </span>
-            <span class="rotate-text"> NI HAO, WO SHI IRENE! 👋 </span>
-            <span class="rotate-text"> BONJOUR, JE SUIS IRENE! 👋 </span>
             <span class="rotate-text"> HOLA, SOY IRENE! 👋 </span>
-            <span class="rotate-text"> KON'NICHIWA, WATASHI WA IRENE! 👋 </span>
-            <span class="rotate-text"> HALLO, ICH BIN IRENE! 👋 </span>
-            <span class="rotate-text"> ! 👋 </span>
+            <span class="rotate-text"> NI HAO, WO SHI IRENE! 👋 </span>            
+            <span class="rotate-text"> HELLO, AKO SI IRENE! 👋 </span>
+            <span class="rotate-text"> XIN CHAO, TOI LA IRENE! 👋 </span>
+            <span class="rotate-text"> BONJOUR, JE SUIS IRENE! 👋 </span>
+            <span class="rotate-text2"> NAMASTE, MAIN IRENE! 👋 </span>
+            <span class="rotate-text2"> MARHABAN, 'ANA IRENE! 👋 </span>
+            <span class="rotate-text2"> ANNYEONG, NANEUN IRENE! 👋 </span>
+            <span class="rotate-text2"> HALLO, ICH BIN IRENE! 👋 </span>
+
           </div>
         </div>
         <!-- <h1> I'M IRENE! 👋 </h1> -->
