added multilingual header

--- a/index.html
+++ b/index.html
@@ -128,11 +128,12 @@
             <span class="rotate-text"> HOLA, SOY IRENE! 👋 </span>
             <span class="rotate-text"> NI HAO, WO SHI IRENE! 👋 </span>            
             <span class="rotate-text"> HELLO, AKO SI IRENE! 👋 </span>
+            <span class="rotate-text2"> CIAO, SONO IRENE! 👋 </span>
             <span class="rotate-text"> XIN CHAO, TOI LA IRENE! 👋 </span>
             <span class="rotate-text"> BONJOUR, JE SUIS IRENE! 👋 </span>
             <span class="rotate-text2"> NAMASTE, MAIN IRENE! 👋 </span>
             <span class="rotate-text2"> MARHABAN, 'ANA IRENE! 👋 </span>
-            <span class="rotate-text2"> ANNYEONG, NANEUN IRENE! 👋 </span>
+            <span class="rotate-text2"> KONNICHIWA, BOKU WA IRENE DESU! 👋 </span>
             <span class="rotate-text2"> HALLO, ICH BIN IRENE! 👋 </span>
 
           </div>
