added multilingual header

--- a/index.html
+++ b/index.html
@@ -119,23 +119,33 @@
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
       <br>
-      <h1 class="logo"><a href="rotate.html" title="Home">  IRENE LUE </a> </h1>
+      <h1 class="logo"><a href="index.html" title="Home">  IRENE LUE </a> </h1>
       <!-- <h1> . </h1> -->
       <body>
         <div class="wrapper-rotate" >
           <div class="words-rotate">
-            <span class="rotate-text"> HELLO, I'M IRENE! 👋 </span>
-            <span class="rotate-text"> HOLA, SOY IRENE! 👋 </span>
-            <span class="rotate-text"> NI HAO, WO SHI IRENE! 👋 </span>            
-            <span class="rotate-text"> HELLO, AKO SI IRENE! 👋 </span>
-            <span class="rotate-text2"> CIAO, SONO IRENE! 👋 </span>
-            <span class="rotate-text"> XIN CHAO, TOI LA IRENE! 👋 </span>
-            <span class="rotate-text"> BONJOUR, JE SUIS IRENE! 👋 </span>
-            <span class="rotate-text2"> NAMASTE, MAIN IRENE! 👋 </span>
-            <span class="rotate-text2"> MARHABAN, 'ANA IRENE! 👋 </span>
-            <span class="rotate-text2"> KONNICHIWA, BOKU WA IRENE DESU! 👋 </span>
-            <span class="rotate-text2"> HALLO, ICH BIN IRENE! 👋 </span>
-
+            <span class="rotate-text"> HELLO, I'M IRENE! 👋 </span>       <!-- english -->
+            <span class="rotate-text"> NI HAO, WO SHI IRENE! 👋 </span>   <!-- chinese -->
+            <span class="rotate-text"> HOLA, SOY IRENE! 👋 </span>        <!-- spanish -->
+            <span class="rotate-text"> MARHABAN, 'ANA IRENE! 👋 </span>   <!-- arabic -->
+            <span class="rotate-text"> BONJOUR, JE SUIS IRENE! 👋 </span> <!-- french -->
+            <span class="rotate-text"> NAMASTE, MAIN IRENE! 👋 </span>    <!-- hindi -->
+            <span class="rotate-text"> HELLO, AKO SI IRENE! 👋 </span>    <!-- tagalog -->
+            <span class="rotate-text"> CIAO, SONO IRENE! 👋 </span>       <!-- italian -->
+            <span class="rotate-text"> XIN CHAO, TOI LA IRENE! 👋 </span> <!-- vietnamese -->
+            <span class="rotate-text"> KON'NICHIWA, IRENEDESU! 👋 </span> <!-- japanese -->
+            <span class="rotate-text"> HALLO, ICH BIN IRENE! 👋 </span>   <!-- german -->
+            <span class="rotate-text"> OI, EU SOU IRENE! 👋 </span>       <!-- portugese -->
+            <span class="rotate-text"> PRYVIT, YA IRENE! 👋 </span>       <!-- ukranian -->
+            <span class="rotate-text"> ANNYEONG, JEONEUN IRENE! 👋 </span>   <!-- korean -->
+            <span class="rotate-text"> HAILO, MAIM HAM IRENE! 👋 </span>   <!-- punjabi -->
+            <span class="rotate-text"> SELAM, BEN IRENE! 👋 </span>        <!-- turkish -->
+            <span class="rotate-text"> WITAM, JESTEM IRENE! 👋 </span>   <!-- polish -->
+            <span class="rotate-text"> HALO, SAYA IRENE! 👋 </span>   <!-- indonesian -->
+            <span class="rotate-text"> ALOHA, WAU IRENE! 👋 </span>   <!-- hawaiian -->
+            <!-- spinner stops here-->
+            <span class="rotate-text"> HAI, AKU IRENE! 👋 </span>   <!-- javanese -->
+            <span class="rotate-text"> HAY, NENU IRENE! 👋 </span>   <!-- telugu -->                                                            
           </div>
         </div>
         <!-- <h1> I'M IRENE! 👋 </h1> -->
@@ -346,7 +356,7 @@
       </div>
       <div class="me-md-auto text-center">
         <div class="copyright">
-          <h1 style="color:#353535;font-size:12px;letter-spacing:0.5px;margin-bottom:30px;"<span> </span> &copy; <span> IRENE LUE 2022 </span></h1>
+          <h1 style="color:#353535;font-size:12px;letter-spacing:0.5px;margin-bottom:30px;" <span> &copy IRENE LUE 2022 </span> </h1>
           <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
         </div>
       </div>
