fixed about me copyright label

--- a/aboutme.html
+++ b/aboutme.html
@@ -117,13 +117,13 @@
               I’m a recent Computer Science graduate from UC San Diego
               with a fascination for thoughtful and innovative design. I 
               believe in crafting solutions that are long-lasting, resolve human needs, and can help 
-              people to live more fulfilling lives. I'm currently a UX designer in training and working on
+              people live more fulfilling lives. I'm currently a UX designer in training and working on
               projects in product design and web development. 
-              Aside from design, you can find me outside on a run, hiking, or exploring LA. 
+              Aside from design, I love to run, watch films, and play sports. 
               </div>
 
             <div class ="about-paragraph2">
-              I'm always excited to collaborate and build new experiences, if you'd like to get in touch, you can reach me at: 
+              I'm always excited to collaborate! If you'd like to get in touch, feel free to reach me at: 
               <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
   
               <!-- <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
@@ -224,9 +224,9 @@
                       <div class="books-middle"> FILMS </div>
                       <div class="books-list">
                         <ol>
-                          <li> FROM UP ON POPPY HILL </li>
                           <li> HARRY POTTER </li>
                           <li> PURSUIT OF HAPPYNESS </li>
+                          <li> FROM UP ON POPPY HILL </li>
                         </ol>
                       </div>
                       <div class="image_overlay">
@@ -490,7 +490,7 @@
 
         <div class="me-md-auto text-center">
           <div class="copyright">
-            <h1 style="color:#353535;font-size:12px;letter-spacing:0.5px; margin-bottom:30px;"<span> </span> &copy; <span> IRENE LUE 2022 </span></h1>
+            <h1 style="color:#353535;font-size:12px;letter-spacing:0.5px;margin-bottom:30px;" <span> &copy IRENE LUE 2022 </span> </h1>
             <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
           </div>
         </div>
