--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="wrapper-rotate" >
           <div class="words-rotate">
             <span class="rotate-text"> HELLO, I'M IRENE! 👋 </span>       <!-- english -->
-            <span class="rotate-text"> NI HAO, WO SHI IRENE! 👋 </span>   <!-- chinese -->
+            <span class="rotate-text"> NI HAO, WO JIAO IRENE! 👋 </span>   <!-- chinese -->
             <span class="rotate-text"> HOLA, SOY IRENE! 👋 </span>        <!-- spanish -->
             <span class="rotate-text"> MARHABAN, 'ANA IRENE! 👋 </span>   <!-- arabic -->
             <span class="rotate-text"> BONJOUR, JE SUIS IRENE! 👋 </span> <!-- french -->
