--- a/under_construction.html
+++ b/under_construction.html
@@ -94,7 +94,7 @@
 						<li><a href="aboutme.html" title="About">ABOUT</a></li>
 						<li>
 							<a
-								href="https://drive.google.com/file/d/1GMUk7ibuRWoxnIl7mP8IHJxXJzCyPHnN/view?usp=sharing"
+								href="https://drive.google.com/file/d/1Z1wG5GKe5S6nDQkkjvvbMZohNVH3Bf82/view?usp=sharing"
 								title="Resume"
 								target="_blank"
 								>RESUME</a
@@ -181,14 +181,14 @@
 					></a> -->
 				</div>
 			</section>
+			<!-- ======= Footer ======= -->
+			<!-- <footer id="footer"> -->
+			<!-- commenting out to get rid of that gray shadow line -->
+			<!-- <h1 style="color:#353535;font-size:12px;letter-spacing:0.5px;margin-bottom:30px;" <span> &copy IRENE LUE 2022 </span> </h1> -->
+			<!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
+			<!-- </footer> -->
 		</main>
 		<!-- End #main -->
-
-		<!-- ======= Footer ======= -->
-		<!-- <footer id="footer"> -->
-		<!-- commenting out to get rid of that gray shadow line -->
-		<!-- </footer> -->
-		<!-- End Footer commenting out to get rid of that gray shadow line -->
 
 		<!-- Vendor JS Files -->
 		<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
