--- a/aboutme.html
+++ b/aboutme.html
@@ -189,7 +189,7 @@
                         <ol>
                           <li> RUNNING </li>
                           <li> WEIGHTLIFTING </li>
-                          <li> ANYTHING OUTDOORS </li>
+                          <li> READING  </li>
                         </ol>
                       </div>
                       <div class="image_overlay">
@@ -248,8 +248,8 @@
                       <div class="books-list">
                         <ol>
                           <li> MANDARIN </li> 
+                          <li> ANIMATION </li>                          
                           <li> HOME IMPROVEMENT </li> 
-                          <li> ANIMATION </li>
                         </ol>
                       </div>
                       <div class="image_overlay">
@@ -267,9 +267,9 @@
                       </div> -->
                       <div class="books-list"> 
                         <ol>        
-                          <li> ENVIRONMENTALISM </li>
+                          <li> HUMAN RIGHTS </li>                             
+                          <li> ENVIRONMENTALISM </li>  
                           <li> ANIMAL WELFARE </li>
-                          <li> HUMAN RIGHTS </li>    
                         </ol> 
                       </div>
                       <div class="image_overlay">
